chore: Préparation pour la présentation